tests/invalid/invalid-018.inox
Module Invalid018

Main() :
    var X := 10 bitor "abc"
;
